--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "recharts": "^2.12.2",
     "web-vitals": "^2.1.0",
     "xlsx": "^0.18.5"
   },
